improve fppos/release notes handing in about.php
