# www/api/index.php
@@ -75,6 +75,7 @@ dispatch_post('/file/:DirName/:Name', 'PostFile');
 
 dispatch_get('/git/originLog', 'GetGitOriginLog');
 dispatch_get('/git/releases/os/:All', 'GitOSReleases');
+dispatch_get('/git/releases/notes/:tag', 'GitOSReleaseNotes');
 dispatch_get('/git/releases/sizes', 'GitOSReleaseSizes');
 dispatch_get('/git/reset', 'GitReset');
 dispatch_get('/git/status', 'GitStatus');
